--- a/webui/files/index.html
+++ b/webui/files/index.html
@@ -10,7 +10,7 @@
     height: 400px;
 }
 #tweet {
-    color: Silver;
+    color: royalBlue;
 }
 </style>
 <script src="jquery-1.11.3.min.js"></script>
