--- a/webui/files/index.html
+++ b/webui/files/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Gokuin Miner WebUI</title>
+<title>DockerCoin Miner WebUI</title>
 <link rel="stylesheet" type="text/css" href="rickshaw.min.css">
 <style>
 #graph {
@@ -97,7 +97,7 @@ $(function () {
 </head>
 <body>
 
-<h1> Welcom to Gokuins WebUI</h1>
+<h1>DockerCoin Miner WebUI</h1>
 
 <div id="graph"></div>
 
