--- a/webui/files/index.html
+++ b/webui/files/index.html
@@ -107,5 +107,7 @@ $(function () {
   <a id="tweet" href="#">(Tweet this!)</a>
 </h2>
 
+<a href="WelcomePage.html"><span class="index_link">Welcome!</span></a>
+
 </body>
 </html>
